# pachong

./: .gitignore  README.md  pyproject.toml  爬取动态渲染网站.md
configs/sites/: crmeb_doc.yaml  example_article.yaml  jjjshop_doc.yaml
docs/: DEVLOG.md
src/pachong/: __init__.py  analyze.py  cli.py  runner.py
src/pachong.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/pachong/extractors/: __init__.py  article_extractor.py
src/pachong/fetchers/: __init__.py  playwright_fetcher.py
src/pachong/models/: __init__.py  result.py  task.py
src/pachong/sites/: __init__.py  click_batch.py  jjjshop_batch.py  link_batch.py
src/pachong/storage/: __init__.py  file_store.py
